--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             En 2018 selon <a href="https://fr.statista.com/statistiques/486554/consommation-de-carburant-moyenne-voiture-france/" target="_blank">Statista</a>, une voiture diesel consomme 6,01 litres pour 100km.
             <br>
             Une voiture qui consomme 6,01 litres/100km va donc émettre 6,01L × 2640 g/L ÷ 100 (par km) = 158,664 g CO2/km soit environ 0,159kg/km.</p>
+            <p>Par simplicité, on utilise la distance ferrovière entre les deux villes et non la distance sur route.</p>
         </div>
 
     </div>
